# Ballistics23

./: .gitmodules  CMakeLists.txt  README.md
data/ephemeris/: ephemeris_result.h
data/frame/: earth_rotation.csv  earth_rotation_result.hpp
data/time/: time_result.hpp
src/: CMakeLists.txt
src/Ballistics/time/: time.cpp  time.hpp
src/Ballistics23/atmosphere/: DensityCalculator.h
src/Ballistics23/ephemeris/: CelestialBodies.h  EphemerisCalculator.h
src/Ballistics23/exceptions/: Exceptions.h
src/Ballistics23/forces/: AccelerationCalculator.h
src/Ballistics23/forces/Gravity/: CelestialGravity.h  EarthGravity.cpp  EarthGravity.h
src/Ballistics23/frame/: FrameConverter.h  PolarMotionContainer.h
src/Ballistics23/integrator/: Butcher_table.hpp  RKMethod.hpp
src/Ballistics23/orbit/: Cartesian.hpp  ConvertOrbit.cpp  ConvertOrbit.hpp  Keplerian.hpp
src/Ballistics23/right_hand_side/: RV.hpp
src/Ballistics23/time/: DutCorrection.h  Time.h  TimeConverter.h
src/Ballistics23/utility/constants/: MathConstants.h
tests/: CMakeLists.txt
tests/ballistics23/ephemeris/: test_Ephemeris.cpp  test_GravParameter.cpp
tests/ballistics23/forces/: test_AccelerationCalculator.cpp
tests/ballistics23/forces/Gravity/: test_EarthGravity.cpp
tests/ballistics23/frame/: test_FrameConverter.cpp  test_PolarMotionContainer.cpp
tests/ballistics23/integrator/: test_RKMethod.cpp
tests/ballistics23/orbit/: test_ConvertOrbit.cpp
tests/ballistics23/time/: test_DutCorrection.cpp  test_Time.cpp  test_TimeConverter.cpp
tests/time/: test_time.cpp
(+3 files in other folders)
